Add fundamentals of quantum theory
[add] 1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb (under construction)
[update] 1.fundamentos/1.introducao-a-computacao-quantica.ipynb
[update] 1.fundamentos/README.md
[update] README.md

--- a/1.fundamentos/1.introducao-a-computacao-quantica.ipynb
+++ b/1.fundamentos/1.introducao-a-computacao-quantica.ipynb
@@ -7,24 +7,8 @@
    "source": [
     "#   Introdução à computação quântica\n",
     "\n",
-    ">   **Autor:** Carlos Antunis Bonfim da Silva Santos\n",
-    ">\n",
-    ">   > Nesta seção iremos descrever os processos clássicos de computação, apresentando a seguir os postulados da mecânica quântica e o comportamento de sistemas quânticos de dois níveis, bem como composições de tais sistemas, ademais aos fenômenos quânticos de superposição, interferência e emaranhamento."
+    ">   Autor: [Carlos Antunis Bonfim da Silva Santos](https://github.com/carlos-antunis-physics/)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01096a46",
-   "metadata": {},
-   "source": [
-    "##  Aspectos quânticos da natureza"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f54be724",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
