--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -11,16 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0c9b7a4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy as sp"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d7477791",
    "metadata": {},
@@ -57,7 +47,7 @@
    "source": [
     "Os exemplos mais simples de espaços de estados são aqueles com dois níveis (os que são usualmente utilizados no contexto da computação quântica).\n",
     "\n",
-    ">   **Exemplo 1.** O espaço de estados associado à polarização de um *photon* é gerado por $\\left|\\leftrightarrow\\right>$ (estar polarizado horizontalmente) ou $\\left|\\updownarrow\\right>$ (estar polarizado verticalmente), ou seja,\n",
+    ">   **Exemplo 1.** O espaço de estados associado à polarização de um fóton é gerado por $\\left|\\leftrightarrow\\right>$ (estar polarizado horizontalmente) ou $\\left|\\updownarrow\\right>$ (estar polarizado verticalmente), ou seja,\n",
     ">   \n",
     ">   $$\n",
     ">       \\left|\\Psi\\right> = \\alpha\\left|\\leftrightarrow\\right> + \\beta\\left|\\updownarrow\\right>\\text{,}\n",
@@ -80,7 +70,21 @@
    "cell_type": "markdown",
    "id": "c29053ab",
    "metadata": {},
-   "source": []
+   "source": [
+    "No **exemplo 1** representamos um sistema quântico com apenas um fóton, contudo, nem sempre há apenas um ente físico num sistema quântico (obviamente). Para descrever sistemas quânticos com entes físicos que tem seus estados, a prior, independentes entre si, utilizamos o que chamamos de produto tensorial.\n",
+    "\n",
+    ">   **definição (produto tensorial).** Dados dois espaços de Hilbert $\\mathcal{E}_1$ e $\\mathcal{E}_2$. Podemos construir o espaço tensor $\\mathcal{E} = \\mathcal{E}_1 \\otimes \\mathcal{E}_2$ como o espaço gerado pelos estados de todos os pares de estados de uma base de cada espaço.\n",
+    "\n",
+    "Podemos entender isso mais claramente se tentarmos descrever o estado de dois fótons.\n",
+    "\n",
+    ">   **Exemplo 2.** O estado coletivo de dois fótons corresponde às possíveis polarizações de ambos, ou seja, estando o primeiro fóton polarizado horizontalmente, o segundo pode estar polarizado horizontalmente ($\\left|\\leftrightarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\leftrightarrow, \\updownarrow\\right>$), ou caso o primeiro esteja polarizado verticalmente, o segundo pode estar polarizado, ainda assim, o segundo pode estar polarizado horizontalmente ($\\left|\\updownarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\updownarrow, \\updownarrow\\right>$), ou seja, o estado mais geral é da forma\n",
+    ">   \n",
+    ">   $$\n",
+    ">       \\left|\\Psi\\right> = \\alpha\\left|\\leftrightarrow, \\leftrightarrow\\right> + \\beta\\left|\\leftrightarrow, \\updownarrow\\right> + \\delta\\left|\\updownarrow, \\leftrightarrow\\right> + \\gamma\\left|\\updownarrow, \\updownarrow\\right>\\text{,}\n",
+    ">   $$\n",
+    ">\n",
+    ">   de modo que lê-se \"o estado dos fótons é, respectivamente, polarizado horizontalmente e horizontalmente com uma amplitude de probabilidade $\\alpha$ ou horizontalmente e verticalmente com uma amplitude de probabilidade $\\beta$ ...\" (a operação de produto tensorial de estados atua como um \"e\" no sentido da lógica-matemática)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,11 +132,21 @@
    "id": "75c120dc",
    "metadata": {},
    "source": [
-    ">   **Terceiro postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $\\hat{\\mathbf{Q}}$ que atua sobre o espaço de estados do sistema.\n",
+    ">   **Terceiro postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $^{1}$ $\\hat{\\mathbf{Q}}$ que atua sobre o espaço de estados do sistema.\n",
     "\n",
     ">   **Quarto postulado da mecânica quântica.** Os possíveis resultados de uma medida de uma quantidade física mensurável $\\mathcal{Q}$ são os autovalores do seu operador observável associado.\n",
     "\n",
     ">   **Quinto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c132b9de",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "1. Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
    ]
   },
   {
