--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "A primeira requisição para a utilização do formalismo da teoria quântica é a capacidade de descrevermos o estado em que um ente físico está, por mais que este se apresente indeterminado (possa estar em dois distintos estados em simultâneo).\n",
     "\n",
-    ">   **Primeiro postulado da mecânica quântica.** O estado de um sistema quântico isolado pode ser descrito, a todo tempo fixado, por meio de um vetor de estado $\\left|\\Psi\\right>$ que pertence a um espaço vetorial $\\mathcal{E}$ denominado espaço de estados."
+    ">   **Primeiro postulado da mecânica quântica.** O estado de um sistema quântico isolado pode ser descrito, a todo tempo fixado, por meio de um vetor de estado $\\left|\\Psi\\right>$ que pertence a um espaço de Hilbert $\\mathcal{E}$ denominado espaço de estados."
    ]
   },
   {
@@ -53,37 +53,9 @@
     ">       \\left|\\Psi\\right> = \\alpha\\left|\\leftrightarrow\\right> + \\beta\\left|\\updownarrow\\right>\\text{,}\n",
     ">   $$\n",
     ">\n",
-    ">   de modo que lê-se \"o estado do fóton é polarizado horizontalmente com uma amplitude de probabilidade $\\alpha$ ou verticalmente com uma amplitude de probabilidade $\\beta$\" (a operação de adição de estados atua como um \"ou\" no sentido da lógica-matemática).\n",
+    ">   de modo que lê-se \"o estado do fóton é polarizado horizontalmente com uma amplitude de probabilidade $\\alpha$ ou verticalmente com uma amplitude de probabilidade $\\beta$\" (note que a operação de adição de estados atua como um \"ou\" no sentido da lógica-matemática).\n",
     "\n",
     "Deve-se notar que $\\alpha$ e $\\beta$ não representam verdadeiramente a probabilidade, dado que são componentes pertencentes ao corpo dos números complexos (outra peculiaridade advinda da natureza quântica), sendo a probabilidade de fato o módulo quadrado dessas componentes ($|\\alpha|^2$ e $|\\beta|^2$)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "935cdd27",
-   "metadata": {},
-   "source": [
-    "####    Estados de sistemas quânticos compostos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c29053ab",
-   "metadata": {},
-   "source": [
-    "No **exemplo 1** representamos um sistema quântico com apenas um fóton, contudo, nem sempre há apenas um ente físico num sistema quântico (obviamente). Para descrever sistemas quânticos com entes físicos que tem seus estados, a prior, independentes entre si, utilizamos o que chamamos de produto tensorial.\n",
-    "\n",
-    ">   **definição (produto tensorial).** Dados dois espaços de Hilbert $\\mathcal{E}_1$ e $\\mathcal{E}_2$. Podemos construir o espaço tensor $\\mathcal{E} = \\mathcal{E}_1 \\otimes \\mathcal{E}_2$ como o espaço gerado pelos estados de todos os pares de estados de uma base de cada espaço.\n",
-    "\n",
-    "Podemos entender isso mais claramente se tentarmos descrever o estado de dois fótons.\n",
-    "\n",
-    ">   **Exemplo 2.** O estado coletivo de dois fótons corresponde às possíveis polarizações de ambos, ou seja, estando o primeiro fóton polarizado horizontalmente, o segundo pode estar polarizado horizontalmente ($\\left|\\leftrightarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\leftrightarrow, \\updownarrow\\right>$), ou caso o primeiro esteja polarizado verticalmente, o segundo pode estar polarizado, ainda assim, o segundo pode estar polarizado horizontalmente ($\\left|\\updownarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\updownarrow, \\updownarrow\\right>$), ou seja, o estado mais geral é da forma\n",
-    ">   \n",
-    ">   $$\n",
-    ">       \\left|\\Psi\\right> = \\alpha\\left|\\leftrightarrow, \\leftrightarrow\\right> + \\beta\\left|\\leftrightarrow, \\updownarrow\\right> + \\delta\\left|\\updownarrow, \\leftrightarrow\\right> + \\gamma\\left|\\updownarrow, \\updownarrow\\right>\\text{,}\n",
-    ">   $$\n",
-    ">\n",
-    ">   de modo que lê-se \"o estado dos fótons é, respectivamente, polarizado horizontalmente e horizontalmente com uma amplitude de probabilidade $\\alpha$ ou horizontalmente e verticalmente com uma amplitude de probabilidade $\\beta$ ...\" (a operação de produto tensorial de estados atua como um \"e\" no sentido da lógica-matemática)."
    ]
   },
   {
@@ -96,10 +68,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4944c670",
+   "id": "3fec60e9",
    "metadata": {},
    "source": [
-    "####    Operadores lineares"
+    "Como um espaço de Hilbert, todo espaço de estados possui uma operação binária $\\left<\\ast|\\ast\\right>$ denominada produto interno.\n",
+    "\n",
+    ">   **definição (produto interno).** dado um espaço de estados $\\mathcal{E}$, denominamos produto interno a operação bilinear $\\left<\\ast|\\ast\\right>$ sobre tal espaço de estados, que satisfaz as seguintes propriedades:\n",
+    ">\n",
+    ">   1. **(simetria conjugada).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}: \\left<u|v\\right> = \\left<v|u\\right>^\\ast$.\n",
+    ">   2. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left<u\\right| + \\beta\\left<v\\right|)\\left|w\\right> = \\alpha\\left<u|w\\right> + \\beta\\left<v|w\\right>$.\n",
+    ">   3. **(positividade).** $\\forall \\left|u\\right> \\in \\mathcal{E}:\\left<u|u\\right> \\ge 0$.\n",
+    "\n",
+    "Note que, devido à existência do produto interno, para qualquer estado $\\left|\\Psi\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<\\Psi\\right| \\equiv \\left<\\Psi|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$."
    ]
   },
   {
@@ -117,6 +97,22 @@
     ">   $$\n",
     ">       \\left|\\Psi(t)\\right> = \\hat{\\mathbf{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
     ">   $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4944c670",
+   "metadata": {},
+   "source": [
+    "####    Operadores lineares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e5e62f",
+   "metadata": {},
+   "source": [
+    "####    Representações matriciais"
    ]
   },
   {
@@ -147,14 +143,6 @@
     "---\n",
     "\n",
     "1. Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be7a9b7c",
-   "metadata": {},
-   "source": [
-    "####    Medidas em sistemas quânticos compostos"
    ]
   },
   {
