--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -79,7 +79,17 @@
     ">   2. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left<u\\right| + \\beta\\left<v\\right|)\\left|w\\right> = \\alpha\\left<u|w\\right> + \\beta\\left<v|w\\right>$.\n",
     ">   3. **(positividade).** $\\forall \\left|u\\right> \\in \\mathcal{E}:\\left<u|u\\right> \\ge 0$.\n",
     "\n",
-    "Note que, devido à existência do produto interno, para qualquer estado $\\left|\\Psi\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<\\Psi\\right| \\equiv \\left<\\Psi|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$."
+    "Note que, devido à existência do produto interno, para qualquer estado $\\left|\\Psi\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<\\Psi\\right| \\equiv \\left<\\Psi|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$.\n",
+    "\n",
+    "Deve-se atentar que, dado que estados da base de um espaço de estados sempre representam comportamentos distintos de um sistema quântico, impomos a mão o seu produto interno de modo a ter a base computacional ortonormal.\n",
+    "\n",
+    ">   **definição (base ortonormal).** dada uma base $\\{\\left|u_i\\right\\}$ de um espaço de estados, dizemos que esta é ortornormal, se e somente se:\n",
+    ">\n",
+    ">   $$\n",
+    ">       \\left<u_i|u_j\\right> = \\delta_{i,j}\\text{,}\n",
+    ">   $$\n",
+    ">\n",
+    ">   onde $\\delta_{i,j}$ é o símbolo delta de Kronecker e é definido como $1$ se $i = j$ e $0$ se $i \\ne j$.\n"
    ]
   },
   {
@@ -140,9 +150,18 @@
    "id": "c132b9de",
    "metadata": {},
    "source": [
+    "###\n",
     "---\n",
     "\n",
     "1. Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "935cdd27",
+   "metadata": {},
+   "source": [
+    "##  Sistemas quânticos compostos"
    ]
   },
   {
