--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Deve-se atentar que, dado que estados da base de um espaço de estados sempre representam comportamentos distintos de um sistema quântico, impomos a mão o seu produto interno de modo a ter a base computacional ortonormal.\n",
     "\n",
-    ">   **definição (base ortonormal).** dada uma base $\\{\\left|u_i\\right\\}$ de um espaço de estados, dizemos que esta é ortornormal, se e somente se:\n",
+    ">   **definição (base ortonormal).** dada uma base $\\{\\left|u_i\\right>\\}$ de um espaço de estados, dizemos que esta é ortornormal, se e somente se:\n",
     ">\n",
     ">   $$\n",
     ">       \\left<u_i|u_j\\right> = \\delta_{i,j}\\text{,}\n",
