--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "858bc1d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d7477791",
    "metadata": {},
@@ -33,11 +43,7 @@
    "id": "98ec86c9",
    "metadata": {},
    "source": [
-    "### Estado de um sistema quântico num tempo fixado\n",
-    "\n",
-    "A primeira requisição para a utilização do formalismo da teoria quântica é a capacidade de descrevermos o estado em que um ente físico está, por mais que este se apresente indeterminado (possa estar em dois distintos estados em simultâneo).\n",
-    "\n",
-    ">   **Primeiro postulado da mecânica quântica.** O estado de um sistema quântico isolado pode ser descrito, a todo tempo fixado, por meio de um vetor de estado $\\left|\\Psi\\right>$ que pertence a um espaço de Hilbert $\\mathcal{E}$ denominado espaço de estados."
+    "### Estado de um sistema quântico num tempo fixado"
    ]
   },
   {
@@ -45,6 +51,10 @@
    "id": "374a02b9",
    "metadata": {},
    "source": [
+    "A primeira requisição para a utilização do formalismo da teoria quântica é a capacidade de descrevermos o estado em que um ente físico está, por mais que este se apresente indeterminado (possa estar em dois distintos estados em simultâneo).\n",
+    "\n",
+    ">   **Primeiro postulado da mecânica quântica.** O estado de um sistema quântico isolado pode ser descrito, a todo tempo fixado, por meio de um vetor de estado $\\left|\\Psi\\right>$ normalizado que pertence a um espaço de Hilbert $\\mathcal{E}$ denominado espaço de estados.\n",
+    "\n",
     "Os exemplos mais simples de espaços de estados são aqueles com dois níveis (os que são usualmente utilizados no contexto da computação quântica).\n",
     "\n",
     ">   **Exemplo 1.** O espaço de estados associado à polarização de um fóton é gerado por $\\left|\\leftrightarrow\\right>$ (estar polarizado horizontalmente) ou $\\left|\\updownarrow\\right>$ (estar polarizado verticalmente), ou seja,\n",
@@ -56,6 +66,50 @@
     ">   de modo que lê-se \"o estado do fóton é polarizado horizontalmente com uma amplitude de probabilidade $\\alpha$ ou verticalmente com uma amplitude de probabilidade $\\beta$\" (note que a operação de adição de estados atua como um \"ou\" no sentido da lógica-matemática).\n",
     "\n",
     "Deve-se notar que $\\alpha$ e $\\beta$ não representam verdadeiramente a probabilidade, dado que são componentes pertencentes ao corpo dos números complexos (outra peculiaridade advinda da natureza quântica), sendo a probabilidade de fato o módulo quadrado dessas componentes ($|\\alpha|^2$ e $|\\beta|^2$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a038119e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\sqrt{2}}{2}\\\\\\frac{\\sqrt{2}}{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[sqrt(2)/2],\n",
+       "[sqrt(2)/2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#   Descrever a base computacional da polarização de um fóton\n",
+    "ket_h = sp.Matrix([[1], [0]])\n",
+    "ket_v = sp.Matrix([[0], [1]])\n",
+    "\n",
+    "#   Descrever um estado quântico com igual probabilidade de estar em cada\n",
+    "#   estado de polarização\n",
+    "ket_psi = (ket_h + ket_v) / sp.sqrt(2)\n",
+    "\n",
+    "display(ket_psi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c0220a8",
+   "metadata": {},
+   "source": [
+    "####\n",
+    "---\n",
+    "\n",
+    "Deve-se notar que estamos utilizando aqui que para todo espaço de estados, podemos representar seus vetores numa forma matricial por tomar a base canônica como a base computacional das matrizes."
    ]
   },
   {
@@ -73,15 +127,13 @@
    "source": [
     "Como um espaço de Hilbert, todo espaço de estados possui uma operação binária $\\left<\\ast|\\ast\\right>$ denominada produto interno.\n",
     "\n",
-    ">   **definição (produto interno).** dado um espaço de estados $\\mathcal{E}$, denominamos produto interno a operação bilinear $\\left<\\ast|\\ast\\right>$ sobre tal espaço de estados, que satisfaz as seguintes propriedades:\n",
+    ">   **definição (produto interno).** dado um espaço de estados $\\mathcal{E}$, denominamos produto interno a operação bilinear $\\left<\\ast|\\ast\\right>$ sobre tal espaço de estados, que satisfaz às seguintes propriedades:\n",
     ">\n",
     ">   1. **(simetria conjugada).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}: \\left<u|v\\right> = \\left<v|u\\right>^\\ast$.\n",
     ">   2. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left<u\\right| + \\beta\\left<v\\right|)\\left|w\\right> = \\alpha\\left<u|w\\right> + \\beta\\left<v|w\\right>$.\n",
     ">   3. **(positividade).** $\\forall \\left|u\\right> \\in \\mathcal{E}:\\left<u|u\\right> \\ge 0$.\n",
     "\n",
-    "Note que, devido à existência do produto interno, para qualquer estado $\\left|\\Psi\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<\\Psi\\right| \\equiv \\left<\\Psi|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$.\n",
-    "\n",
-    "Deve-se atentar que, dado que estados da base de um espaço de estados sempre representam comportamentos distintos de um sistema quântico, impomos a mão o seu produto interno de modo a ter a base computacional ortonormal.\n",
+    "Deve-se atentar que, dado que estados da base computacional de um espaço de estados sempre representam comportamentos distintos de um sistema quântico, impomos a mão o seu produto interno de modo a ter a base computacional ortonormal.\n",
     "\n",
     ">   **definição (base ortonormal).** dada uma base $\\{\\left|u_i\\right>\\}$ de um espaço de estados, dizemos que esta é ortornormal, se e somente se:\n",
     ">\n",
@@ -89,24 +141,9 @@
     ">       \\left<u_i|u_j\\right> = \\delta_{i,j}\\text{,}\n",
     ">   $$\n",
     ">\n",
-    ">   onde $\\delta_{i,j}$ é o símbolo delta de Kronecker e é definido como $1$ se $i = j$ e $0$ se $i \\ne j$.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24a16db5",
-   "metadata": {},
-   "source": [
-    "### Dinâmica de um sistema quântico\n",
+    ">   onde $\\delta_{i,j}$ é o símbolo delta de Kronecker e é definido como $1$ se $i = j$ e $0$ se $i \\ne j$.\n",
     "\n",
-    ">   **Segundo postulado da mecânica quântica.** Para todo sistema quântico isolado existem um único par de operadores $\\hat{\\mathbf{U}}(t)$, unitário, e $\\hat{\\mathbf{H}}(t)$, hermitiano, tais que este seguem a *equação de Schrödinger*:\n",
-    ">   $$\n",
-    ">       \\imath\\hbar\\partial_t\\hat{\\mathbf{U}}(t) = \\hat{\\mathbf{H}}(t)\\text{,}\n",
-    ">   $$\n",
-    ">   tal que, um estado físico $\\left|\\Psi_0\\right>$ do sistema após a passagem de um tempo $t$ estará num estado:\n",
-    ">   $$\n",
-    ">       \\left|\\Psi(t)\\right> = \\hat{\\mathbf{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
-    ">   $$"
+    "Note que, devido à existência do produto interno, para qualquer estado $\\left|u\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<u\\right| \\equiv \\left<u|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$."
    ]
   },
   {
@@ -119,38 +156,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6e5e62f",
+   "id": "163daf0d",
    "metadata": {},
    "source": [
-    "####    Representações matriciais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f603e7d",
-   "metadata": {},
-   "source": [
-    "##  Medições e medidas no regime quântico"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75c120dc",
-   "metadata": {},
-   "source": [
-    ">   **Terceiro postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $^{1}$ $\\hat{\\mathbf{Q}}$ que atua sobre o espaço de estados do sistema.\n",
+    "Devido à definição de *funcionais lineares* podemos definir uma operação de produto entre vetores de estados ainda mais abstrata, denominada produto externo.\n",
     "\n",
-    ">   **Quarto postulado da mecânica quântica.** Os possíveis resultados de uma medida de uma quantidade física mensurável $\\mathcal{Q}$ são os autovalores do seu operador observável associado.\n",
+    ">   **definição (produto externo).** dado um espaço de estados $\\mathcal{E}$, denominamos produto externo a operação bilinear $|\\ast\\left>\\right<\\ast|$ sobre tal espaço de estados que satisfaz à seguinte propriedade:\n",
+    ">\n",
+    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: \\left|u\\right>(\\alpha\\left<v\\right| + \\beta\\left<w\\right|) = \\alpha\\left|u\\right>\\left<v\\right| + \\beta\\left|u\\right>\\left<w\\right|$.\n",
     "\n",
-    ">   **Quinto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido."
+    "Note que, se aplicado num vetor de estado qualquer do espaço de estados, o resultado de um produto vetorial retornará um novo vetor de estado, ou seja, todo produto externo corresponde a uma espécie abstrata de operação sobre o espaço de estados, a qual denominamos por *operador linear*.\n",
+    "\n",
+    ">   **definição (operador linear).** dado um espaço de estados $\\mathcal{E}$, denominamos operador linear sobre $\\mathcal{E}$ toda operação $\\mathbf{\\hat{A}}$ que atua num vetor de estado e resulta noutro (não necessariamente normalizados) e satisfaz à seguinte propriedade:\n",
+    ">\n",
+    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: \\mathbf{\\hat{A}}(\\alpha\\left|u\\right> + \\beta\\left|v\\right>) = \\alpha\\mathbf{\\hat{A}}\\left|u\\right> + \\beta\\mathbf{\\hat{A}}\\left|v\\right>$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c132b9de",
+   "id": "a7536f2f",
    "metadata": {},
    "source": [
-    "###\n",
+    "#####   Operadores hermitianos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f9b4fb",
+   "metadata": {},
+   "source": [
+    ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $^{1}$ $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema.\n",
+    "\n",
+    ">   **Terceiro postulado da mecânica quântica.** Os possíveis resultados de uma medida de uma quantidade física mensurável $\\mathcal{Q}$ são os autovalores do seu operador observável associado.\n",
+    "\n",
+    ">   **Quarto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n",
+    "\n",
     "---\n",
     "\n",
     "1. Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
@@ -158,10 +198,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935cdd27",
+   "id": "06e5f51f",
    "metadata": {},
    "source": [
-    "##  Sistemas quânticos compostos"
+    "#####   Operadores unitários"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a16db5",
+   "metadata": {},
+   "source": [
+    "### Dinâmica de um sistema quântico\n",
+    "\n",
+    ">   **Quinto postulado da mecânica quântica.** Para todo sistema quântico isolado existem um único par de operadores $\\mathbf{\\hat{U}}(t)$, unitário, e $\\mathbf{\\hat{H}}(t)$, hermitiano, tais que este seguem a *equação de Schrödinger*:\n",
+    ">   $$\n",
+    ">       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}(t)\\text{,}\n",
+    ">   $$\n",
+    ">   tal que, um estado físico $\\left|\\Psi_0\\right>$ do sistema após a passagem de um tempo $t$ estará num estado:\n",
+    ">   $$\n",
+    ">       \\left|\\Psi(t)\\right> = \\mathbf{\\hat{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
+    ">   $$"
    ]
   },
   {
