--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -106,10 +106,7 @@
    "id": "2c0220a8",
    "metadata": {},
    "source": [
-    "####\n",
-    "---\n",
-    "\n",
-    "Deve-se notar que estamos utilizando aqui que para todo espaço de estados, podemos representar seus vetores numa forma matricial por tomar a base canônica como a base computacional das matrizes."
+    "Deve-se notar que estamos utilizando aqui que para todo espaço de estados, podemos representar seus vetores numa forma matricial por tomar um isomorfismo da base computacional à base canônica das matrizes."
    ]
   },
   {
@@ -191,9 +188,7 @@
     "\n",
     ">   **Quarto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n",
     "\n",
-    "---\n",
-    "\n",
-    "1. Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
+    "Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
    ]
   },
   {
@@ -209,8 +204,6 @@
    "id": "24a16db5",
    "metadata": {},
    "source": [
-    "### Dinâmica de um sistema quântico\n",
-    "\n",
     ">   **Quinto postulado da mecânica quântica.** Para todo sistema quântico isolado existem um único par de operadores $\\mathbf{\\hat{U}}(t)$, unitário, e $\\mathbf{\\hat{H}}(t)$, hermitiano, tais que este seguem a *equação de Schrödinger*:\n",
     ">   $$\n",
     ">       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}(t)\\text{,}\n",
