--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -70,19 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a038119e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\sqrt{2}}{2}\\\\\\frac{\\sqrt{2}}{2}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\sqrt{2}}{2}\\\\\\frac{\\sqrt{2} i}{2}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[sqrt(2)/2],\n",
-       "[sqrt(2)/2]])"
+       "[  sqrt(2)/2],\n",
+       "[sqrt(2)*I/2]])"
       ]
      },
      "metadata": {},
@@ -95,8 +95,8 @@
     "ket_v = sp.Matrix([[0], [1]])\n",
     "\n",
     "#   Descrever um estado quântico com igual probabilidade de estar em cada\n",
-    "#   estado de polarização\n",
-    "ket_psi = (ket_h + ket_v) / sp.sqrt(2)\n",
+    "#   estado de polarização (fases não importam para a probabilidade)\n",
+    "ket_psi = (ket_h + sp.I * ket_v) / sp.sqrt(2)\n",
     "\n",
     "display(ket_psi)"
    ]
@@ -107,6 +107,79 @@
    "metadata": {},
    "source": [
     "Deve-se notar que estamos utilizando aqui que para todo espaço de estados, podemos representar seus vetores numa forma matricial por tomar um isomorfismo da base computacional à base canônica das matrizes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20453f63",
+   "metadata": {},
+   "source": [
+    "####    Sistemas quânticos compostos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9594ea72",
+   "metadata": {},
+   "source": [
+    "No **exemplo 1** representamos um sistema quântico com apenas um fóton, contudo, nem sempre há apenas um ente físico num sistema quântico (obviamente). Podemos entender isso mais claramente se tentarmos descrever o estado de dois fótons.\n",
+    "\n",
+    ">   **Exemplo 2.** O estado coletivo de dois fótons corresponde às possíveis polarizações de ambos, ou seja, estando o primeiro fóton polarizado horizontalmente, o segundo pode estar polarizado horizontalmente ($\\left|\\leftrightarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\leftrightarrow, \\updownarrow\\right>$), ou caso o primeiro esteja polarizado verticalmente, o segundo pode estar polarizado, ainda assim, o segundo pode estar polarizado horizontalmente ($\\left|\\updownarrow, \\leftrightarrow\\right>$) ou verticalmente ($\\left|\\updownarrow, \\updownarrow\\right>$), ou seja, o estado mais geral é da forma\n",
+    ">   \n",
+    ">   $$\n",
+    ">       \\left|\\Psi\\right> = \\alpha\\left|\\leftrightarrow, \\leftrightarrow\\right> + \\beta\\left|\\leftrightarrow, \\updownarrow\\right> + \\delta\\left|\\updownarrow, \\leftrightarrow\\right> + \\gamma\\left|\\updownarrow, \\updownarrow\\right>\\text{,}\n",
+    ">   $$\n",
+    ">\n",
+    ">   de modo que lê-se \"o estado dos fótons é, respectivamente, polarizado horizontalmente e horizontalmente com uma amplitude de probabilidade $\\alpha$ ou horizontalmente e verticalmente com uma amplitude de probabilidade $\\beta$ ...\" (note que a operação de produto tensorial de estados atua como um \"e\" no sentido da lógica-matemática).\n",
+    "\n",
+    "Para descrever sistemas quânticos com entes físicos que tem seus estados, a prior, independentes entre si, utilizamos o que chamamos de produto tensorial.\n",
+    "\n",
+    ">   **definição (produto tensorial).** Dados dois espaços de estados $\\mathcal{E}_1$ e $\\mathcal{E}_2$, denominamos produto tensorial a operação bilinear $\\left|\\ast\\right>\\otimes\\left|\\ast\\right>$ que satisfaz às seguintes propriedades:\n",
+    ">\n",
+    ">   1. **(linearidade à esquerda).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}_1, \\forall \\left|w\\right> \\in \\mathcal{E}_2, \\forall \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left|u\\right> + \\beta \\left|v\\right>) \\otimes \\left|w\\right> = \\alpha\\left|u\\right>\\otimes\\left|w\\right> + \\beta \\left|v\\right>\\otimes\\left|w\\right>$.\n",
+    ">\n",
+    ">   2. **(linearidade à direita).** $\\forall \\left|u\\right> \\in \\mathcal{E}_1, \\forall \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}_2, \\forall \\alpha, \\beta \\in \\mathbb{C}: \\left|u\\right>\\otimes(\\alpha\\left|v\\right> + \\beta \\left|w\\right>) = \\alpha\\left|u\\right>\\otimes\\left|v\\right> + \\beta \\left|u\\right>\\otimes\\left|w\\right>$.\n",
+    "\n",
+    "notavelmente, ao efetuar o produto tensorial o estado resultante pertencerá a um novo espaço de estados denominado *espaço tensor*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9c192fc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\left[\\begin{matrix}0\\\\\\frac{\\sqrt{2}}{2}\\end{matrix}\\right]\\\\\\left[\\begin{matrix}\\frac{\\sqrt{2}}{2}\\\\0\\end{matrix}\\right]\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "[[[[0], [sqrt(2)/2]]], [[[sqrt(2)/2], [0]]]]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#   Descrever a base computacional da polarização de um fóton\n",
+    "ket_hv = sp.tensorproduct(ket_h, ket_v)\n",
+    "ket_vh = sp.tensorproduct(ket_v, ket_h)\n",
+    "\n",
+    "#   Descrever um estado quântico com igual probabilidade de estar em cada\n",
+    "#   estado de polarização (tomamos apenas estados de polarização oposta)\n",
+    "ket_psi_tensor = (ket_hv + ket_vh) / sp.sqrt(2)\n",
+    "\n",
+    "display(ket_psi_tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa20b257",
+   "metadata": {},
+   "source": [
+    "este estado é especialmente interessante pois, mesmo sendo construído como combinação linear de resultados de produtos tensores, não é um estado separável em produtos tensores, de modo que a informação de cada fóton está intimamente ligada com a do outro (fenômeno quântico que denominamos por emaranhamento)."
    ]
   },
   {
@@ -127,7 +200,7 @@
     ">   **definição (produto interno).** dado um espaço de estados $\\mathcal{E}$, denominamos produto interno a operação bilinear $\\left<\\ast|\\ast\\right>$ sobre tal espaço de estados, que satisfaz às seguintes propriedades:\n",
     ">\n",
     ">   1. **(simetria conjugada).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}: \\left<u|v\\right> = \\left<v|u\\right>^\\ast$.\n",
-    ">   2. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left<u\\right| + \\beta\\left<v\\right|)\\left|w\\right> = \\alpha\\left<u|w\\right> + \\beta\\left<v|w\\right>$.\n",
+    ">   2. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\forall \\alpha, \\beta \\in \\mathbb{C}: (\\alpha\\left<u\\right| + \\beta\\left<v\\right|)\\left|w\\right> = \\alpha\\left<u|w\\right> + \\beta\\left<v|w\\right>$.\n",
     ">   3. **(positividade).** $\\forall \\left|u\\right> \\in \\mathcal{E}:\\left<u|u\\right> \\ge 0$.\n",
     "\n",
     "Deve-se atentar que, dado que estados da base computacional de um espaço de estados sempre representam comportamentos distintos de um sistema quântico, impomos a mão o seu produto interno de modo a ter a base computacional ortonormal.\n",
@@ -141,6 +214,44 @@
     ">   onde $\\delta_{i,j}$ é o símbolo delta de Kronecker e é definido como $1$ se $i = j$ e $0$ se $i \\ne j$.\n",
     "\n",
     "Note que, devido à existência do produto interno, para qualquer estado $\\left|u\\right>$ num espaço de estados de um sistema quântico, podemos definir $\\left<u\\right| \\equiv \\left<u|\\ast\\right>$ o qual denominamos por *funcional linear*, e ao conjunto de todos os funcionais lineares definidos com base um espaço de estados $\\mathcal{E}$ damos o nome de espaço dual $\\mathcal{E}^\\ast$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "159fee8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\sqrt{2}}{2} & - \\frac{\\sqrt{2} i}{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([[sqrt(2)/2, -sqrt(2)*I/2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#   Obter os funcionais lineares associados à base computacional\n",
+    "bra_v = ket_v.transpose().conjugate()\n",
+    "bra_h = ket_h.transpose().conjugate()\n",
+    "\n",
+    "#   Obter o funcional linear associado ao estado quântico\n",
+    "bra_psi = ket_psi.transpose().conjugate()\n",
+    "\n",
+    "display(bra_psi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "251df5b0",
+   "metadata": {},
+   "source": [
+    "Utilizamos acima, que o funcional associado a um dado vetor de estado é seu conjugado hermitiano $\\left<\\psi\\right| = \\left|\\psi\\right>^\\dagger$, que na representação matricial corresponde a conjugar suas entradas e transpor a matriz."
    ]
   },
   {
@@ -160,13 +271,49 @@
     "\n",
     ">   **definição (produto externo).** dado um espaço de estados $\\mathcal{E}$, denominamos produto externo a operação bilinear $|\\ast\\left>\\right<\\ast|$ sobre tal espaço de estados que satisfaz à seguinte propriedade:\n",
     ">\n",
-    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: \\left|u\\right>(\\alpha\\left<v\\right| + \\beta\\left<w\\right|) = \\alpha\\left|u\\right>\\left<v\\right| + \\beta\\left|u\\right>\\left<w\\right|$.\n",
+    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right>, \\left|w\\right> \\in \\mathcal{E}, \\forall \\alpha, \\beta \\in \\mathbb{C}: \\left|u\\right>(\\alpha\\left<v\\right| + \\beta\\left<w\\right|) = \\alpha\\left|u\\right>\\left<v\\right| + \\beta\\left|u\\right>\\left<w\\right|$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fa0cd829",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0\\\\0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1, 0],\n",
+       "[0, 1]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#   Computar relação de completeza da base computacional\n",
+    "_1 = ket_v * bra_v + ket_h * bra_h\n",
+    "\n",
+    "display(_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "714fef32",
+   "metadata": {},
+   "source": [
+    "mostramos acima um exemplo de base completa. Dizemos que uma base é completa caso, em sua representação matricial, a soma do produto externo de seus elementos resulta na matriz identidade.\n",
     "\n",
     "Note que, se aplicado num vetor de estado qualquer do espaço de estados, o resultado de um produto vetorial retornará um novo vetor de estado, ou seja, todo produto externo corresponde a uma espécie abstrata de operação sobre o espaço de estados, a qual denominamos por *operador linear*.\n",
     "\n",
     ">   **definição (operador linear).** dado um espaço de estados $\\mathcal{E}$, denominamos operador linear sobre $\\mathcal{E}$ toda operação $\\mathbf{\\hat{A}}$ que atua num vetor de estado e resulta noutro (não necessariamente normalizados) e satisfaz à seguinte propriedade:\n",
     ">\n",
-    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}, \\alpha, \\beta \\in \\mathbb{C}: \\mathbf{\\hat{A}}(\\alpha\\left|u\\right> + \\beta\\left|v\\right>) = \\alpha\\mathbf{\\hat{A}}\\left|u\\right> + \\beta\\mathbf{\\hat{A}}\\left|v\\right>$."
+    ">   1. **(linearidade).** $\\forall \\left|u\\right>, \\left|v\\right> \\in \\mathcal{E}, \\forall \\alpha, \\beta \\in \\mathbb{C}: \\mathbf{\\hat{A}}(\\alpha\\left|u\\right> + \\beta\\left|v\\right>) = \\alpha\\mathbf{\\hat{A}}\\left|u\\right> + \\beta\\mathbf{\\hat{A}}\\left|v\\right>$."
    ]
   },
   {
@@ -184,11 +331,11 @@
    "source": [
     ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $^{1}$ $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema.\n",
     "\n",
+    "Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais.\n",
+    "\n",
     ">   **Terceiro postulado da mecânica quântica.** Os possíveis resultados de uma medida de uma quantidade física mensurável $\\mathcal{Q}$ são os autovalores do seu operador observável associado.\n",
     "\n",
-    ">   **Quarto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n",
-    "\n",
-    "Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais."
+    ">   **Quarto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n"
    ]
   },
   {
@@ -220,14 +367,6 @@
    "metadata": {},
    "source": [
     "##  Formalismo do operador densidade"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b1a238d",
-   "metadata": {},
-   "source": [
-    "####    Traço parcial"
    ]
   },
   {
