--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -329,7 +329,7 @@
    "id": "e8f9b4fb",
    "metadata": {},
    "source": [
-    ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $^{1}$ $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema.\n",
+    ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema.\n",
     "\n",
     "Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais.\n",
     "\n",
@@ -359,14 +359,6 @@
     ">   $$\n",
     ">       \\left|\\Psi(t)\\right> = \\mathbf{\\hat{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
     ">   $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f6dba10",
-   "metadata": {},
-   "source": [
-    "##  Formalismo do operador densidade"
    ]
   },
   {
