--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -351,14 +351,19 @@
    "id": "24a16db5",
    "metadata": {},
    "source": [
-    ">   **Quinto postulado da mecânica quântica.** Para todo sistema quântico isolado existem um único par de operadores $\\mathbf{\\hat{U}}(t)$, unitário, e $\\mathbf{\\hat{H}}(t)$, hermitiano, tais que este seguem a *equação de Schrödinger*:\n",
-    ">   $$\n",
-    ">       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}(t)\\text{,}\n",
-    ">   $$\n",
-    ">   tal que, um estado físico $\\left|\\Psi_0\\right>$ do sistema após a passagem de um tempo $t$ estará num estado:\n",
+    ">   **Quinto postulado da mecânica quântica.** Para todo sistema quântico isolado, existe um operador $\\mathbf{\\hat{U}}(t)$ unitário tal que, um estado físico $\\left|\\Psi_0\\right>$ do sistema após a passagem de um tempo $t$ estará num estado:\n",
     ">   $$\n",
     ">       \\left|\\Psi(t)\\right> = \\mathbf{\\hat{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
-    ">   $$"
+    ">   $$\n",
+    ">\n",
+    ">   >   Por meio deste postulado, utilizando o [teorema de Stones](https://en.wikipedia.org/wiki/Stone%27s_theorem_on_one-parameter_unitary_groups), podemos chegar à célebre *equação de Schrödinger*:\n",
+    ">   >   $$\n",
+    ">   >       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}\\text{,}\n",
+    ">   >   $$\n",
+    ">   >\n",
+    ">   >   ao impor $\\mathbf{\\hat{H}} / \\hbar$ como o gerador do grupo.\n",
+    "\n",
+    "Dado que $\\mathbf{\\hat{H}}$ comporta a descrição da dinâmica quântica, por analogia à mecânica hamiltoniana, o denominamos como operador Hamiltoniano."
    ]
   },
   {
