--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -361,7 +361,7 @@
     ">   >       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}\\text{,}\n",
     ">   >   $$\n",
     ">   >\n",
-    ">   >   ao impor $\\mathbf{\\hat{H}} / \\hbar$ como o gerador do grupo.\n",
+    ">   >   ao impor $\\mathbf{\\hat{H}} / \\hbar$ como o gerador do grupo (esta \"demonstração\" só é válida para o caso de $\\mathbf{\\hat{H}}$ independente do tempo).\n",
     "\n",
     "Dado que $\\mathbf{\\hat{H}}$ comporta a descrição da dinâmica quântica, por analogia à mecânica hamiltoniana, o denominamos como operador Hamiltoniano."
    ]
